[project]
name = "code-capture"
version = "0.1.4"
description = "Capture code blocks while executing them"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["bunch-py3>=2.0.0"]
authors = [{ name = "Peter Somhorst" }, { name = "Grayden Shand" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
